<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <ProgressBar
        android:id="@+id/pBNewRequestDialog"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:indeterminate="true"
        android:layout_gravity="center"
        android:visibility="gone" />
    <LinearLayout
        android:id="@+id/lLNewRequestDialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvNewRequest"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <RadioButton
                android:id="@+id/rbTutoring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbTutoring" />
            <RadioButton
                android:id="@+id/rbInquires"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbInquires"
                android:layout_marginLeft="20dp"/>

            <RadioButton
                android:id="@+id/rbCampusTour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbCampusTour"
                android:layout_marginLeft="20dp"/>
        </RadioGroup>

        <Spinner
            android:id="@+id/sSelectSpecForRequest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/etRequestQuestion"
            android:hint="@string/etRequestQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:inputType="textMultiLine"/>
    </LinearLayout>
</LinearLayout>