<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="10dp">

        <TextView
            android:id="@+id/tvRating"
            android:layout_width="wrap_content"
            android:text="5"
            android:textSize="60dp"
            android:layout_marginEnd="20dp"
            android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etResponser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/responsed_by"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvResponserType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/responser_type"/>
            <CheckBox
                android:id="@+id/cbTeacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:clickable="false"
                android:text="@string/teacher"/>
            <CheckBox
                android:id="@+id/cbStudent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student"
                android:clickable="false"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>