<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".RequestManager.RequestDetailsViewFragment">


    <ProgressBar
        android:id="@+id/pBRequestDetails"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:indeterminate="true"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/lLRequestDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etRequester"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/requested_by"
                android:imeActionId="6"
                android:imeActionLabel="@string/actionLoginShort"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:editable="false"
                android:hint="@string/question"
                android:imeActionId="6"
                android:imeActionLabel="@string/actionLoginShort"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etServiceType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:editable="false"
                android:hint="@string/service_type"
                android:imeActionId="6"
                android:imeActionLabel="@string/actionLoginShort"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:editable="false"
                android:hint="@string/status"
                android:imeActionId="6"
                android:imeActionLabel="@string/actionLoginShort"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etSpec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:editable="false"
                android:hint="@string/spicilization"
                android:imeActionId="6"
                android:imeActionLabel="@string/actionLoginShort"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnCancelRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/cancel_request"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            />
        <Button
            android:id="@+id/btnRateServiceProvider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/rate_the_responder"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btnCall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_call"
                app:backgroundTint="@color/whatsapp_green"
                app:fabSize="mini"
                android:visibility="gone"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btnWhatsapp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_whatsapp"
                app:backgroundTint="@color/whatsapp_green"
                app:fabSize="mini"
                android:visibility="gone"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvResponses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/responses"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/lvRequestsResponses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/etServiceProvider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:editable="false"
                    android:hint="@string/responded_by"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/actionLoginShort"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:visibility="gone"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/etServiceProviderRate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:editable="false"
                    android:hint="@string/responder_rating"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/actionLoginShort"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:visibility="gone"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>